# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added backorifice-info from Gorjan Petrovski, which retrieves
  lots of system information from a BackOrifice server.

o Added a service probe for BackOrifice contributed by Gorjan
  Petrovski.

o Added a service probe for Zend Java Bridge, which is vulnerable if
  exposed to an untrusted network. It was contributed by Michael
  Schierl.

o [NSE] Added the afp-ls script that lists files accessible on remote
  AFP Volumes. [Patrik]
  
o [NSE] Added the targets-sniffer script by Nick Nickolaou. It sniffs
  on an interface for a configurable amount of time, then displays the
  IPv4 addresses found and optionally adds them to the scanning queue.

o [NSE] Added nmap.get_interface and nmap.get_interface_info functions
  so scripts can access characteristics of the scanning interface.
  [Djalal]

o [NSE] Added epmd-info.nse, which gets a list of Erlang node port
  numbers. [Toni Ruottu]

o [NSE] Added http-affiliate-id.nse, which scrapes a web page for
  affiliate IDs (like Google AdSense and Amazon associates) that can
  be used to link sites to the same owner. [Hani Benhabiles, Daniel
  Miller]

o Fixed an overflow in scan elapsed time display that caused negative
  times to be printed after about 25 days. [Daniel Miller]

o [NSE] ssh-hostkey now additionally has a postrule that prints hosts
  that have the same hostkey. [Henri Doreau]

o [NSE] Added dns-nsec-enum.nse, which quickly enumerates the domains
  of a DNSSEC server that uses NSEC records for nonexistent domains.
  [John Bond, David]

o Nmap no longer searches for data files (like nmap-services) in the
  current directory as a last resort. This is to reduce the chance of
  accessing an unexpected file in case the system-installed data files
  are not found. The main reason for searching the current directory
  was to support running ./nmap from a source directory. This is now
  supported by searching the directory containing the Nmap executable